--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar  navbar-fixed-top nav">
       <div class="container ">
         <div   class="row">
-          <div class="col-xs-9  line">
+          <div class="col-xs-9  col-md line">
             <span>START BOOTSTRAP</span>
           </div>
           <div class="col-xs-3  nav ">
@@ -37,37 +37,37 @@
           </div>
         </div>
       </div>
-      <h4> grapchic artist-web designer-illustrator</h4>
+      <h4> Grapchic Artist-web Designer-illustrator</h4>
     </div>
     <!-- SEZIONE DEL PORTFOLIO -->
     <div class="container">
       <div class="row row-main">
         <div class="col-xs-12 ">
           <h2>portfolio</h2>
-          <div class="col-xs-4 col-xs-offset-1">
+          <div class="col-xs-4 col-xs-offset-1 text-right">
             <hr class="blu">
           </div>
           <div class="col-xs-2 nopadding"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
-          <div class="col-xs-4">
+          <div class="col-xs-4 ">
             <hr class="blu">
           </div>
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="casa">
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img  class="img"src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
         </div>
-        <div class="col-xs-12 spazio">
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
           <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
         </div>
       </div >
@@ -84,7 +84,7 @@
           <hr>
         </div>
       </div>
-        <div class="text-left">
+        <div class="text-left row">
           <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p> <br>
           <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
         </div>
@@ -93,6 +93,7 @@
     <!-- CONTATTI -->
     <div class="container">
       <div class="row text-center">
+        <br><br>
         <h2 class="blu">CONTACT ME</h2>
         <div class="col-xs-4 col-xs-offset-1">
           <hr class="blu">
@@ -119,16 +120,16 @@
     <!-- LOCATION E MEDIA -->
     <div class="container white text-center">
       <div class="row spazio">
-        <div class="spazio">
+        <div class="spazio lg-spazio">
           <h3>LOCATION</h3> <br>
           <p>2215 jhon Daniel Drive</p>
           <p>Clark, MO 65243</p>
         </div>
-        <div class="spazio">
+        <div class="spazio lg-spazio">
           <h3>AROUND THE WEB</h3> <br>
           <p><i class="fab fa-facebook-f"></i> <i class="fab fa-twitter"></i>  <i class="fab fa-linkedin-in"></i> <i class="fas fa-basketball-ball"></i></p>
         </div>
-        <div class="spazio">
+        <div class="spazio lg-spazio">
           <h3>ABOUT FREELANCER</h3> <br>
           <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start Bootstrap .</a> </p>
         </div>
