--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
         </div>
       </div>
         <div class="text-left row">
-          <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p> <br>
-          <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <div class="auto row">
+            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p> <br>
+            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          </div>
         </div>
         <button  id="btn-white" type="button" name="button"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> Free Download! </button>
     </div>
