--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Bootstrap</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
   </head>
   <body>
     <!-- NAVBAR -->
     <nav class="navbar  navbar-fixed-top nav">
       <div class="container ">
         <div   class="row">
-          <div class="col-xs-9  col-md line">
+          <div class="col-xs-8  col-md-7 col-md-offset-2 line">
             <span>START BOOTSTRAP</span>
           </div>
-          <div class="col-xs-3  nav ">
+          <div class="col-xs-4 col-md-2 nav ">
               <button type="button" name="button">MENU <i class="fas fa-bars"></i></button>
           </div>
         </div>
@@ -28,13 +28,7 @@
       <h1>start bootstrap</h1>
       <div class="container ">
         <div class="row">
-          <div class="col-xs-4 col-xs-offset-1">
-            <hr>
-          </div>
-          <div class="col-xs-2 nopadding"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-          <div class="col-xs-4">
-            <hr>
-          </div>
+          <div class="col-xs-4 col-xs-offset-4 nopadding">  <span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
         </div>
       </div>
       <h4> Grapchic Artist-web Designer-illustrator</h4>
@@ -44,31 +38,66 @@
       <div class="row row-main">
         <div class="col-xs-12 ">
           <h2>portfolio</h2>
-          <div class="col-xs-4 col-xs-offset-1 text-right">
-            <hr class="blu">
+          <div class="col-xs-4 col-xs-offset-4 nopadding celeste"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img class="img img-responsive" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="casa">
           </div>
-          <div class="col-xs-2 nopadding"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
-          <div class="col-xs-4 ">
-            <hr class="blu">
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img class="img img-responsive" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">          </div>
+          </div>
+        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img  class="img img-responsive "src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
           </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="casa">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img class="img img-responsive" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
+          </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img class="img img-responsive" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
+          </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img  class="img"src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
-          <img class="img" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
+          <div class="relative">
+            <div class="img  overlay">
+              <div class="piu">
+                <i class="fas fa-plus"></i>
+              </div>
+            </div>
+            <img class="img img-responsive" src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
+          </div>
         </div>
       </div >
     </div >
@@ -76,18 +105,12 @@
     <div class="container about">
       <div class="row">
         <h2 >ABOUT</h2>
-        <div class="col-xs-4 col-xs-offset-1">
-          <hr>
-        </div>
-        <div class="col-xs-2 nopadding"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-        <div class="col-xs-4">
-          <hr>
-        </div>
+        <div class="col-xs-4 col-xs-offset-4 nopadding"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
       </div>
         <div class="text-left row">
           <div class="auto row">
-            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p> <br>
-            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p> <br>
+            <p >You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
         </div>
         <button  id="btn-white" type="button" name="button"><span class="glyphicon glyphicon-save" aria-hidden="true"></span> Free Download! </button>
@@ -97,13 +120,7 @@
       <div class="row text-center">
         <br><br>
         <h2 class="blu">CONTACT ME</h2>
-        <div class="col-xs-4 col-xs-offset-1">
-          <hr class="blu">
-        </div>
-        <div class="col-xs-2 nopadding"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
-        <div class="col-xs-4">
-          <hr class="blu">
-        </div>
+        <div class="col-xs-4 col-xs-offset-4 nopadding celeste"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
       </div>
       <div class="container contact">
         <input type="text" class="form-control" placeholder="Name">
