--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
           <div class="col-xs-8  col-md-7 col-md-offset-2 line">
             <span>START BOOTSTRAP</span>
           </div>
-          <div class="col-xs-4 col-md-2 nav ">
+          <div class="col-xs-4 col-md-2 nav dropdown ">
               <button type="button" name="button">MENU <i class="fas fa-bars"></i></button>
+              <div class="dropdown-content">
+                <a href="#">PORTFOLIO</a>
+                <a href="#">ABOUT</a>
+                <a href="#">CONTENT</a>
+              </div>
           </div>
         </div>
       </div>
