--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row row-main">
         <div class="col-xs-12 ">
-          <h2>portfolio</h2>
+          <h2 >PORTFOLIO</h2>
           <div class="col-xs-4 col-xs-offset-4 nopadding celeste"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 spazio ">
