--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container ">
         <div   class="row">
           <div class="col-xs-8  col-md-7 col-md-offset-2 line">
-            <span>START BOOTSTRAP</span>
+            <h3>START BOOTSTRAP</h3>
           </div>
           <div class="col-xs-4 col-md-2 nav dropdown ">
               <button type="button" name="button">MENU <i class="fas fa-bars"></i></button>
