impostato menu a tendina ( cell ) e menu normale

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <nav class="navbar  navbar-fixed-top nav">
       <div class="container ">
         <div   class="row">
-          <div class="col-xs-8  col-md-7 col-md-offset-2 line">
+          <div class="col-xs-7 col-xs-offset-1 col-md-6 col-md-offset-1 line">
             <h3>START BOOTSTRAP</h3>
           </div>
-          <div class="col-xs-4 col-md-2 nav dropdown ">
-              <button type="button" name="button">MENU <i class="fas fa-bars"></i></button>
+          <div class="col-xs-4 col-md-5 nav dropdown ">
+              <span class="nocell">PORTFOLIO &nbsp; &nbsp;</span>    <span class="nocell">ABOUT &nbsp; &nbsp;</span>   <span class="nocell">CONTACT</span>
+              <button  class="ghost" type="button" name="button">MENU <i class="fas fa-bars"></i></button>
               <div class="dropdown-content">
                 <a href="#">PORTFOLIO</a>
                 <a href="#">ABOUT</a>
