--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- SEZIONE DEL PORTFOLIO -->
     <div class="container">
       <div class="row row-main">
-        <div class="col-xs-12 ">
+        <div class="col-xs-12 spazio ">
           <h2 >PORTFOLIO</h2>
           <div class="col-xs-4 col-xs-offset-4 nopadding celeste"><span class="glyphicon glyphicon-star blu" aria-hidden="true"></span></div>
         </div>
